syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup.edu;

service KeymanagerRegisterGrpcService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service KeymanagerRemoveGrpcService {
  rpc deleta (DeletaChavePixRequest) returns (DeletaChavePixResponse) {}
}

message RegistraChavePixRequest {
  string clientId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message RegistraChavePixResponse {
  string clientId = 1;
  string pixId = 2;
}

message DeletaChavePixRequest {
  string pixId = 1;
  string clientId = 2;
}

message DeletaChavePixResponse {
  string messagem = 1;
}

enum TipoChave {
  TIPO_DESCONHECIDO = 0;
  CPF =1;
  CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}
